src/test/ui/issue-23589.stderr
error[E0214]: parenthesized parameters may only be used with a trait
  --> $DIR/issue-23589.rs:12:15
   |
LL |     let v: Vec(&str) = vec!['1', '2'];
   |               ^^^^^^ only traits may use parentheses

error: aborting due to previous error

For more information about this error, try `rustc --explain E0214`.
